// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.externalauditstorage.v1;

import "teleport/header/v1/resourceheader.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/externalauditstorage/v1;externalauditstoragev1";

// ExternalAuditStorage contains External Audit Storage configuration.
// It contains configuration that allows users to store audit events and session
// recordings on customer-owned infra instead of in Teleport Cloud.
message ExternalAuditStorage {
  // Header is the header for the resource.
  teleport.header.v1.ResourceHeader header = 1;
  // Spec is the specification for external audit storage.
  ExternalAuditStorageSpec spec = 2;
}

// ExternalAuditStorageConfigSpec is the specification of external audit storage.
message ExternalAuditStorageSpec {
  // IntegrationName is name of an existing AWS OIDC integration used to
  // authenticate to the external AWS account.
  string integration_name = 1;
  // Region is the AWS region where the infrastructure is hosted.
  string region = 2;
  // SessionRecordingsURI is the S3 path used to store session recordings.
  string session_recordings_uri = 3;
  // AuditEventsLongTermURI is the S3 path used to store batched parquet files
  // with audit events.
  string audit_events_long_term_uri = 4;
  // AthenaResultsURI is the S3 path used to store temporary results of Athena
  // queries.
  string athena_results_uri = 5;
  // AthenaWorkgroup is the workgroup used for Athena audit log queries.
  string athena_workgroup = 6;
  // GlueDatabase is the database used for Athena audit log queries.
  string glue_database = 7;
  // GlueTable is the table used for Athena audit log queries.
  string glue_table = 8;
  // PolicyName is the name of the IAM policy attached to the OIDC integration
  // role.
  string policy_name = 9;
}
